--- a/RawToolsLib/CMakeLists.txt
+++ b/RawToolsLib/CMakeLists.txt
@@ -1,23 +1,22 @@
 # RawToolsLib
 cmake_minimum_required(VERSION 3.7 FATAL_ERROR)
 
-message (" cmake - RawToolsLib")
+	message ("cmake - RawToolsLib")
 
 project(RawToolsLib CXX)
 
-add_library(RawToolsLib
-        FileBuffer.cpp
-        FileBuffer.h
-        FileMetaData.cpp
-        FileMetaData.h
-        ProcessBlock.cpp
-        ProcessBlock.h
-        RawImage.cpp
-        RawImage.h
-        RawTools.cpp
-        RawTools.h
-        Sony.cpp
-        Sony.h)
+add_library(RawToolsLib SHARED
+		include/RawTools/RawTools.h
+		src/FileBuffer.cpp
+		src/FileBuffer.h
+		src/FileMetaData.cpp
+		src/FileMetaData.h
+		src/RawImage.cpp
+		src/RawImage.h
+		src/RawTools.cpp
+		src/Sony.cpp
+		src/Sony.h
+		 src/_RawTools.h)
 
 set_target_properties(RawToolsLib PROPERTIES
   CXX_STANDARD 14
@@ -25,12 +24,15 @@ set_target_properties(RawToolsLib PROPERTIES
   CXX_EXTENSIONS NO
   )
 
-install(TARGETS RawToolsLib 
-		ARCHIVE DESTINATION ${PROJECT_BINARY_DIR}/${CMAKE_BUILD_TYPE}/lib)
-install (FILES RawTools.h DESTINATION ${PROJECT_BINARY_DIR}/${CMAKE_BUILD_TYPE}/include)
-install (FILES RawToolsLib-config.cmake DESTINATION ${PROJECT_BINARY_DIR}/${CMAKE_BUILD_TYPE}/lib)
+install(TARGETS RawToolsLib
+        EXPORT RawToolsLibConfig
+		ARCHIVE DESTINATION lib
+        LIBRARY DESTINATION lib
+        RUNTIME DESTINATION bin)
+install(DIRECTORY include/ DESTINATION include)
 
-add_custom_target(install_${PROJECT_NAME}
-        $(MAKE) install
-        DEPENDS(${PROJECT_NAME})
-        COMMENT "Installing ${PROJECT_NAME}")
+install(EXPORT RawToolsLibConfig
+        DESTINATION share/RawToolsLib/cmake)
+
+export(TARGETS RawToolsLib
+        FILE RawToolsLibConfig.cmake)
