--- a/RawToolsLib/CMakeLists.txt
+++ b/RawToolsLib/CMakeLists.txt
@@ -1,27 +1,32 @@
 # RawToolsLib
 cmake_minimum_required(VERSION 3.7 FATAL_ERROR)
 
-	message ("cmake - RawToolsLib")
+message ("cmake - RawToolsLib")
 
 project(RawToolsLib CXX)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR/include})
 
 add_library(RawToolsLib SHARED
-		include/RawTools/RawTools.h
+		include/RawTools.hpp
 		src/FileBuffer.cpp
-		src/FileBuffer.h
+		src/FileBuffer.hpp
 		src/FileMetaData.cpp
-		src/FileMetaData.h
+		src/FileMetaData.hpp
+		src/ProcessBlock.hpp
+		src/ProcessBlock.cpp
 		src/RawImage.cpp
-		src/RawImage.h
+		src/RawImage.hpp
+		src/RawToolsImpl.hpp
 		src/RawTools.cpp
 		src/Sony.cpp
-		src/Sony.h
-		 src/_RawTools.h)
+		src/Sony.hpp
+)
 
 set_target_properties(RawToolsLib PROPERTIES
   CXX_STANDARD 14
   CXX_STANDARD_REQUIRED YES
   CXX_EXTENSIONS NO
+  LINKER_LANGUAGE CXX
   )
 
 install(TARGETS RawToolsLib
