--- a/RawToolsTest/CMakeLists.txt
+++ b/RawToolsTest/CMakeLists.txt
@@ -11,6 +11,7 @@ target_sources(RawToolsTest
         PUBLIC
         RawToolsTest.cpp)
 
+target_include_directories(RawToolsTest INTERFACE ${CMAKE_SOURCE_DIR}/RawToolsLib/include)
 include_directories(${CMAKE_SOURCE_DIR}/RawToolsLib)
 
 target_link_libraries(RawToolsTest RawToolsLib)
