--- a/RawToolsLib/CMakeLists.txt
+++ b/RawToolsLib/CMakeLists.txt
@@ -21,7 +21,7 @@ add_library(RawToolsLib SHARED
 		src/RawTools.cpp
 		src/Sony.cpp
 		src/Sony.hpp
-)
+        src/TiffFile.cpp src/TiffFile.hpp)
 
 set_target_properties(RawToolsLib PROPERTIES
   CXX_STANDARD 14
