--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,6 +1,7 @@
 {
     "version": "0.2.0",
     "configurations": [
+
         {
             "name": "C++ Launch",
             "type": "cppdbg",
@@ -11,6 +12,7 @@
             "cwd": "${workspaceRoot}",
             "environment": [],
             "externalConsole": true,
+            //////////
             "linux": {
                 "MIMode": "gdb",
                 "setupCommands": [
@@ -21,11 +23,14 @@
                     }
                 ]
             },
+            ////////
             "osx": {
                 "MIMode": "lldb"
             },
+            ///////
             "windows": {
                 "MIMode": "gdb",
+                "miDebuggerPath": "D:/MinGW64/mingw64/bin/gdb.exe",
                 "setupCommands": [
                     {
                         "description": "Enable pretty-printing for gdb",
